- Profil Eigenschaften vom Typ Auswahlmenü können als Pflichtfeld definiert
  werden.
- Die Profil Eigenschaften Geschlecht, Anrede, Land und Webseite werden nur
  aufgelistet, sofern eine Option ausgewählt wurde.
- Für das Profilbild-Thumbnail kann ausgewählt werden, ob das Bild auf die
  Thumbnail-Grösse zugeschnitten oder skaliert werden soll.

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID

News Manager
- Bei den Teasern kann der neue Platzhalter [[TEASER_FULL_TEXT]] verwendet
  werden, um den kompletten Inhalt der News Meldungen auszugeben.

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.
- Kopierfunktion für Downloads.
- Die effektiven Zugriffsberechtigungen einer Benutzergruppe oder Benutzers
  können angezeigt werden.
- Neuer Platzhalter DOWNLOADS_FILE_MD5 für die Ausgabe der MD5 Summe eines
  Downloads.
- Der Block "Verwandte Downloads" (downloads_related_file_list) unterstützt
  die gleichen Platzhalter wie bei der Detailseite eines Downloads.
- Für die Erfassung der Beschreibung eines Downloads oder Kategorie steht ein
  WYSIWYG-Editor zur Verfügung.
- Beim Hinzufügen eines Downloads kann ein Benachrichtigungs-E-Mail an
  ausgewählte Benutzergruppen versendet werden.

Modul: Dokumenten System
- Uhrzeit- (nicht nur Datums-) gesteuerte Veröffentlichung von Dokumenten.

Modul: Mediathek
- Das Modul Podcast wurde in Mediathek umbenannt.
- Der Begriff "Kategorie" wurde umbenannt in "Rubrik".
- Mit dem Layout Template [[PODCAST_VIDEO]] (podcast_video.html) kann ein